# opencv_demo

./: .gitignore  CMakeLists.txt  opencv_demo.cc  opencv_demo_more_morphology.cc  opencv_demo_text.cc
